--- a/package.json
+++ b/package.json
@@ -16,9 +16,12 @@
     "react-router-dom": "^6.22.3"
   },
   "devDependencies": {
+    "@tailwindcss/postcss": "^4.1.17",
     "@types/react": "^18.2.66",
     "@types/react-dom": "^18.2.22",
     "@vitejs/plugin-react": "^4.2.1",
+    "autoprefixer": "^10.4.22",
+    "tailwindcss": "^4.1.17",
     "vite": "^5.2.0"
   }
 }
